# swanhacks2026

./: .env.example  .gitignore  .prettierignore  README.md  package.json  pnpm-lock.yaml  requirements.txt  tsconfig.base.json  turbo.json
apps/api/: .dockerignore  Dockerfile  README.md  fly.toml  package.json  pyproject.toml  tsconfig.json
apps/api/app/: config.py  main.py  prompts.py  schemas.py
apps/api/app/routes/: ai.py  attachments.py  devices.py  sync.py
apps/api/app/services/: ai_service.py  supabase_service.py  sync_service.py
apps/api/local_sidecar/: audio_llm.py  audio_session.py  llm.py  main.py
apps/api/scripts/: bootstrap-venv.sh  dev.mjs  seed-demo.ts
apps/api/src/: index.ts
apps/api/src/db/migrations/: 0001_init.sql
apps/api/src/lib/: env.ts  openai.ts  row-mappers.ts  supabase.ts
apps/api/src/middleware/: device-auth.ts  rate-limit.ts
apps/api/src/routes/: ai.routes.ts  buildings.routes.ts  hazards.routes.ts  health.routes.ts
apps/api/src/services/: ai.service.ts  hazards.service.ts  storage.service.ts
apps/api/studynest_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/dist-types/: tsconfig.tsbuildinfo
apps/desktop/dist-types/electron/: local-ai.d.ts  local-ai.d.ts.map  local-ai.js  local-ai.js.map  main.d.ts.map  main.js  main.js.map  preload.d.ts  preload.d.ts.map  preload.js  preload.js.map
apps/desktop/dist-types/scripts/: fetch-model.d.ts  fetch-model.d.ts.map  fetch-model.js  fetch-model.js.map  seed.js  seed.js.map
apps/desktop/dist-types/src/: App.d.ts.map  App.js  App.js.map  main.d.ts.map  main.js  main.js.map  store.d.ts  store.d.ts.map  store.js  store.js.map
apps/desktop/electron/: local-ai.ts  main.ts  preload.ts
apps/desktop/public/: desktopicon.icns
apps/desktop/scripts/: fetch-model.ts  prepare-electron-bundle.mjs  seed.ts
apps/desktop/src/: App.tsx  main.tsx  sql-js.d.ts  store.ts  styles.css
apps/desktop/src/components/: AllNotes.tsx  AudioJobsToast.tsx  AudioRecorderModal.tsx  Calendar.tsx  ClassAsk.tsx  ClassView.tsx  Classes.tsx  DeckDetailRail.tsx  Flashcards.tsx  FlashcardsHub.tsx  HeroSearch.tsx  Home.tsx  NoteEditor.tsx  NotesList.tsx  Onboarding.tsx  Points.tsx  Quiz.tsx  QuizDetailRail.tsx  QuizGenerationModal.tsx  (+6 more)
apps/mobile/: app.json  metro.config.js  package.json  tailwind.config.js  tsconfig.json
apps/mobile/app/: _layout.tsx  capture.tsx  index.tsx
apps/mobile/src/: store.ts  theme.ts
docs/: api.md  architecture.md  data-model.md  demo-script.md  product-plan.md  sync.md
scripts/: ensure-electron.cjs
supabase/: full_schema.sql  seed.sql
supabase/migrations/: 0001_init.sql  0002_calendar.sql  0002_classes_archived_at.sql  0002_classes_overview_text.sql  0002_notes_icon.sql  0002_reward_points_events.sql  0003_quiz_sessions.sql  0005_sync_payload_columns.sql
(+373 files in other folders)
